--- a/app/src/main/res/layout/activity_show_value.xml
+++ b/app/src/main/res/layout/activity_show_value.xml
@@ -7,67 +7,100 @@
     android:layout_height="match_parent"
     tools:context=".show_value">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="168dp"
-        android:layout_height="226dp"
-        android:layout_marginTop="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/images" />
-
     <Button
         android:id="@+id/button_Stop"
-        android:layout_width="280dp"
-        android:layout_height="48dp"
+        android:layout_width="0dp"
+        android:layout_height="66dp"
         android:onClick="button_Stop_click"
         android:text="@string/Stop"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.846" />
+        app:layout_constraintVertical_bias="0.918"
+        app:rippleColor="@color/purple_700" />
 
     <TextView
-        android:id="@+id/txt_valueX"
-        android:layout_width="192dp"
-        android:layout_height="61dp"
-        android:layout_marginBottom="360dp"
+        android:id="@+id/txt_valueY"
+        android:layout_width="88dp"
+        android:layout_height="42dp"
         android:textAlignment="textEnd"
-        android:textColor="#4CAF50"
+        android:textColor="#DA0404"
         android:textColorHint="#5A5959"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/button_Stop"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.65"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintStart_toEndOf="@+id/lbl_y"
+        app:layout_constraintTop_toBottomOf="@+id/txt_valueX"
+        app:layout_constraintVertical_bias="0.397" />
 
     <TextView
         android:id="@+id/lbl_x"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="132dp"
+        android:layout_width="104dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="76dp"
         android:text="X-axis"
-        android:textSize="20sp"
+        android:textColor="#090808"
+        android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/txt_valueX"
-        app:layout_constraintHorizontal_bias="0.53"
+        app:layout_constraintBottom_toTopOf="@+id/button_Stop"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.765" />
+
+    <TextView
+        android:id="@+id/lbl_y"
+        android:layout_width="104dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="56dp"
+        android:text="Y-axis"
+        android:textColor="#050505"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/button_Stop"
+        app:layout_constraintEnd_toStartOf="@+id/txt_valueX"
+        app:layout_constraintHorizontal_bias="0.598"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/lbl_tittle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="36dp"
         android:text="Accelerometer  (m/s2)"
         android:textColor="#0E0E0E"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/txt_valueX"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintHorizontal_bias="0.455"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/txt_valueX"
+        android:layout_width="89dp"
+        android:layout_height="43dp"
+        android:textAlignment="textEnd"
+        android:textColor="#4CAF50"
+        android:textColorHint="#5A5959"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.359"
+        app:layout_constraintStart_toEndOf="@+id/lbl_x"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.616" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/images"
+        app:layout_constraintBottom_toTopOf="@+id/lbl_tittle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
