--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="@string/BIENVENIDO"
+        android:text="WELCOME"
         android:textColor="#151515"
         android:textSize="34sp"
         android:textStyle="bold"
@@ -49,14 +49,14 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:text="PULSE PARA COMENZAR"
+        android:layout_marginStart="88dp"
+        android:text="@string/Pulse_to_start_the_app"
         android:textColor="#100F0F"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button_Start"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lbl_bienvenido"
-        app:layout_constraintVertical_bias="0.517" />
+        app:layout_constraintVertical_bias="0.523" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
